--- a/research/model_creation.ipynb
+++ b/research/model_creation.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "127c3779-616a-4ab0-bd4e-2c4fa4c0872e",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1cc89909-0c15-4a1e-a2f5-952cf11cb40f",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "13   219008            7  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "5b08ab78-8a7f-4b7c-8f4b-8cac5531cf7c",
    "metadata": {},
    "outputs": [],
@@ -402,8 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7e9e3ea8-c20d-4c4c-aa58-89b4020c732a",
+   "execution_count": 17,
+   "id": "717c9bab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "0ea0300d-4913-4b93-b53b-b34f73c5e604",
    "metadata": {},
    "outputs": [
@@ -630,12 +630,13 @@
        "[97618 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "final_df = \n",
     "final_df"
    ]
   },
