--- a/research/prediction.ipynb
+++ b/research/prediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "[1071 rows x 1635 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[97618 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
     "\n",
     "def recommender(book_name):\n",
     "    index = np.where(loaded_model.index==book_name)[0][0]\n",
-    "    similar_items = sorted(list(enumerate(loaded_scores[index])),key=lambda x:x[1],reverse=True)[1:5]\n",
+    "    similar_items = sorted(list(enumerate(loaded_scores[index])),key=lambda x:x[1],reverse=True)[1:6]\n",
     "    \n",
     "    books = []\n",
     "    for i in similar_items:\n",
@@ -767,7 +767,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = recommender('1984')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'George Orwell'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://images.amazon.com/images/P/0060809833.01.LZZZZZZZ.jpg'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -784,16 +833,19 @@
        "  'http://images.amazon.com/images/P/0440180295.01.LZZZZZZZ.jpg'],\n",
        " ['Awakening',\n",
        "  'Kate Chopin',\n",
-       "  'http://images.amazon.com/images/P/0380002450.01.LZZZZZZZ.jpg']]"
+       "  'http://images.amazon.com/images/P/0380002450.01.LZZZZZZZ.jpg'],\n",
+       " [\"The Handmaid's Tale\",\n",
+       "  'Margaret Atwood',\n",
+       "  'http://images.amazon.com/images/P/0449212602.01.LZZZZZZZ.jpg']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommender('1984')"
+    "l"
    ]
   },
   {
